Project

General

Profile

Actions

Bug #7859

closed

uts: indentation errors

Added by Toomas Soome over 6 years ago. Updated over 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
kernel
Start date:
2017-02-14
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

../../common/vm/seg_spt.c:251:2: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
dmake: Warning: Command failed for target `obj64/seg_spt.o'
../../common/syscall/sendfile.c:1322:2: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
dmake: Warning: Command failed for target `obj64/sendfile.o'
../../common/vm/vm_usage.c:1550:2: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
dmake: Warning: Command failed for target `obj64/vm_usage.o'
dmake: Warning: Target `install.targ' not remade because of errors
The following command caused the error:
../../common/vm/seg_spt.c:251:2: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
dmake: Warning: Command failed for target `obj32/seg_spt.o'
../../common/vm/vm_usage.c:1550:2: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
dmake: Warning: Command failed for target `obj32/vm_usage.o'

Actions #1

Updated by Electric Monk over 6 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit c99fb8b374bfc91bf70c6decb2ee7fb9f4a0be58

commit  c99fb8b374bfc91bf70c6decb2ee7fb9f4a0be58
Author: Toomas Soome <tsoome@me.com>
Date:   2017-02-23T14:52:04.000Z

    7859 uts: indentation errors
    Reviewed by: Marcel Telka <marcel@telka.sk>
    Reviewed by: Juraj Lutter <juraj@lutter.sk>
    Reviewed by: Yuri Pankov <yuri.pankov@gmail.com>
    Reviewed by: Dale Ghent <daleg@omniti.com>
    Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

Actions

Also available in: Atom PDF