7859 uts: indentation errors Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Juraj Lutter <juraj@lutter.sk> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Reviewed by: Dale Ghent <daleg@omniti.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>